# nanocobs

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: nanocobs.h
src/: nanocobs.cpp
test/: nanocobs_test.cpp
